<package>
  <name>kugle_srvs</name>
  <version>0.0.0</version>
  <description>The kugle_srvs package</description>
  <maintainer email="thomasj@tkjelectronics.dk">Thomas Jespersen</maintainer>
  <license>MIT</license>

  <author email="thomasj@tkjelectronics.dk">Thomas Jespersen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
